--- a/PI-Dogs-main/client/src/components/Landing.module.css
+++ b/PI-Dogs-main/client/src/components/Landing.module.css
@@ -1,13 +1,25 @@
 body{
     background-color: bisque;
     background-image:url('./assets/dogs2.jpg');
-    height: 200px;
-    width: 250px;
-    
     background-position: center;
     background-repeat: no-repeat;
-    margin: 20px;
+    background-size: cover;;
+    margin-top: 650px;
+    margin-left:100px;
+    margin-right: 100px;
     padding: 50px;
     
     
+}
+.botonIngresar{
+    color: wheat;
+    
+}
+h1{
+    color:red;
+    border-style:solid black;
+
+}
+.landingPageApp{
+    color:royalblue;
 }
