--- a/PI-Dogs-main/client/src/components/About.css
+++ b/PI-Dogs-main/client/src/components/About.css
@@ -3,8 +3,16 @@
     background-position: left;
     background-repeat: no-repeat;
     background-size: 100px;
-    margin-top: 50px;
+    margin-top: 25px;
     margin-left:100px;
     margin-right: 100px;
     padding: 20px;
-}
+
+    border: 3px;
+    border-style:  solid;
+    border-color: rgb(102, 84, 57);
+    border-radius: 4px;
+    }
+    .presentacion{
+        display: grid;
+    }
