--- a/PI-Dogs-main/client/src/components/MyDog.css
+++ b/PI-Dogs-main/client/src/components/MyDog.css
@@ -3,13 +3,17 @@ body{
 }
 .my-dog{
 
-    width: 40%;
-    height: 80%;
+    width: 30%;
+    height: 75%;
     background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-bottom: 55px;
   padding:50px;
   position: absolute;
+  
+  
+ 
+  
 }
 .polaroid{
     text-align: center;
@@ -17,7 +21,7 @@ body{
 }
 
 .container{
-    display:flex;
+    display:inline;
     
     
     
@@ -26,9 +30,11 @@ body{
     margin: 10px;
     padding: 20px;
     
+    
 }
 .alfi{
-    display:flex;
+    display:inline;
+    margin-bottom: 55px;
+  
+    position: absolute;;
 }
-
-
