--- a/PI-Dogs-main/client/src/components/Detail.css
+++ b/PI-Dogs-main/client/src/components/Detail.css
@@ -1,9 +1,5 @@
 .container{
-    
-    
     margin-top: 5px;
-    
-
 }
 .dog{
     display: inline-block;
@@ -11,24 +7,28 @@
     justify-content: center;
     align-items: center;
     width: 50vh;
-    height: 105vh;
+    height: 115vh;
     border-style: solid;
     border-width: 3px;
     border-color: rgb(104, 104, 104);
     border-radius: 3px;  
-    background-color: rgb(206, 200, 193); 
+    background-color: rgb(206, 200, 193);
+   
      
-
 }
-
-    
-
-  .detail-image{
-    width: 45%;
+.detail-image{
+    width: 95%;
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin-bottom: 25px;
     text-align: center;
-    padding: 10px 20px;
+    justify-content: center;
+    padding: 10px 15px 10px 15px;
+  }
+  h5, h3{
+      color:rgb(59, 59, 102);
+      padding: 0px;
+    
+      
   }
    
