--- a/PI-Dogs-main/client/src/components/Card.css
+++ b/PI-Dogs-main/client/src/components/Card.css
@@ -22,7 +22,7 @@
 .card-image{
     border-style: solid;
     border-width: 2px;
-    border-color: rgb(88, 88, 117);
+    border-color: grey(73, 73, 172);
     border-radius: 3px;
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
